Fix X overflow on aside

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -75,6 +75,7 @@ body {
     border-right: 1px solid rgba(0,0,0,0.1);
     padding: 20px;
     overflow-y: auto;
+    overflow-x: hidden;
     background: linear-gradient(to bottom, #FFFFFF 0%, #FAFAFA 100%);
     position: relative;
     & > header {
